2001-11-11  Lauris Kaplinski  <lauris@ximian.com>

	* src/file.c (file_save_ok): Update relative image references

	* src/sp-image.c (sp_image_destroy): Unregister resource
	(sp_image_build): Register resource

	* src/sp-spiral.c (sp_spiral_menu): Implement
	(sp_spiral_spiral_properties): Generic attributes dialog

2001-11-10  Lauris Kaplinski  <lauris@ximian.com>

	* src/sp-anchor.c (sp_anchor_menu): New method
	(sp_anchor_link_properties): Ditto
	(sp_anchor_link_follow): Ditto
	(sp_anchor_link_remove): Ditto

	* src/sp-star.c (sp_star_menu): New method
	(sp_star_star_properties): Ditto

	* src/sp-item.c (sp_item_create_link): New method

	* src/sp-item-group.c (sp_item_group_ungroup): Ungroup anchors too

	* src/forward.h: Added SPAnchor

	* src/dialogs/sp-attribute-widget.h: New file, implement generic
	asynchronous attribute widget, and table of attribute widgets

	* src/dialogs/sp-attribute-widget.c: New file

	* src/dialogs/object-attributes.h: New file, implement generic
	asynchronous object attribute dialog

	* src/dialogs/object-attributes.c: New file

	* src/display/Makefile.am (INCLUDES): Added SODIPODI_CFLAGS

	* src/sp-anchor.c: New file, implement SVG <a> element. Actual event
	code is pure experimental and need some serious thinking.

	* src/sp-anchor.h: Ditto

	* src/svg-view.c (arena_handler): Forward arena events to SPEvents

	* src/sp-object-repr.c (sp_object_type_lookup): parse <a> as anchor

	* src/sp-item.h: Added ::event virtual method plus some test code

	* src/sp-item.c (sp_item_event): New method

	* src/desktop.c (sp_desktop_new): Moved drawing behind all other layers
	(sp_desktop_document_resized): Resize page frame

	* src/helper/sodipodi-ctrlrect.h: More complex structure to represent
	page frame as well

	* src/helper/sodipodi-ctrlrect.c (sp_ctrlrect_hline): New render method
	(sp_ctrlrect_vline): Ditto
	(sp_ctrlrect_area): Ditto
	(sp_ctrlrect_render): Use more complex structure
	(sp_ctrlrect_update): Ditto