@@ -18,46 +18,63 @@
 #include "sp-attribute-widget.h"
 #include "object-attributes.h"
 
-static const guchar *anchor_labels[] = {"Type:", "Role:", "Arcrole:", "Title:", "Show:", "Actuate:", "Href:", "Target:"};
-static const guchar *anchor_attrs[] = {"xlink:type", "xlink:role", "xlink:arcrole", "xlink:title", "xlink:show",
-				       "xlink:actuate", "xlink:href", "target"};
-#define NUM_ANCHOR_ATTRS (sizeof (anchor_attrs) / sizeof (anchor_attrs[0]))
+typedef struct {
+	guchar *label;
+	guchar *attribute;
+} SPAttrDesc;
 
-static const guchar *star_labels[] = {
-	N_("Sides:"),
-	N_("Center X:"),
-	N_("Center Y:"),
-	N_("R1:"),
-	N_("R2:"),
-	N_("ARG1:"),
-	N_("ARG2:")};
-static const guchar *star_attrs[] = {
-	"sodipodi:sides",
-	"sodipodi:cx",
-	"sodipodi:cy",
-	"sodipodi:r1",
-	"sodipodi:r2",
-	"sodipodi:arg1",
-	"sodipodi:arg2"};
-#define NUM_STAR_ATTRS (sizeof (star_attrs) / sizeof (star_attrs[0]))
+static const SPAttrDesc anchor_desc[] = {
+	{ N_("Href:"), "xlink:href"},
+	{ N_("Target:"), "target"},
+	{ N_("Type:"), "xlink:type"},
+	{ N_("Role:"), "xlink:role"},
+	{ N_("Arcrole:"), "xlink:arcrole"},
+	{ N_("Title:"), "xlink:title"},
+	{ N_("Show:"), "xlink:show"},
+	{ N_("Actuate:"), "xlink:actuate"},
+	{ NULL, NULL}
+};
 
-static const guchar *spiral_labels[] = {
-	N_("Center X:"),
-	N_("Center Y:"),
-	N_("Expansion:"),
-	N_("Revolution:"),
-	N_("Radius:"),
-	N_("Argument:"),
-	N_("T0:")};
-static const guchar *spiral_attrs[] = {
-	"sodipodi:cx",
-	"sodipodi:cy",
-	"sodipodi:expansion",
-	"sodipodi:revolution",
-	"sodipodi:radius",
-	"sodipodi:argument",
-	"sodipodi:t0"};
-#define NUM_SPIRAL_ATTRS (sizeof (spiral_attrs) / sizeof (spiral_attrs[0]))
+static const SPAttrDesc star_desc[] = {
+	{ N_("Sides:"), "sodipodi:sides"},
+	{ N_("Center X:"), "sodipodi:cx"},
+	{ N_("Center Y:"), "sodipodi:cy"},
+	{ N_("R1:"), "sodipodi:r1"},
+	{ N_("R2:"), "sodipodi:r2"},
+	{ N_("ARG1:"), "sodipodi:arg1"},
+	{ N_("ARG2:"), "sodipodi:arg2"},
+	{ NULL, NULL}
+};
+
+static const SPAttrDesc spiral_desc[] = {
+	{ N_("Center X:"), "sodipodi:cx"},
+	{ N_("Center Y:"), "sodipodi:cy"},
+	{ N_("Expansion:"), "sodipodi:expansion"},
+	{ N_("Revolution:"), "sodipodi:revolution"},
+	{ N_("Radius:"), "sodipodi:radius"},
+	{ N_("Argument:"), "sodipodi:argument"},
+	{ N_("T0:"), "sodipodi:t0"},
+	{ NULL, NULL}
+};
+
+static const SPAttrDesc image_desc[] = {
+	{ N_("URL:"), "xlink:href"},
+	{ N_("X:"), "x"},
+	{ N_("Y:"), "y"},
+	{ N_("Width:"), "width"},
+	{ N_("Height:"), "height"},
+	{ NULL, NULL}
+};
+
+static const SPAttrDesc rect_desc[] = {
+	{ N_("X:"), "x"},
+	{ N_("Y:"), "y"},
+	{ N_("Width:"), "width"},
+	{ N_("Height:"), "height"},
+	{ N_("RX:"), "rx"},
+	{ N_("RY:"), "ry"},
+	{ NULL, NULL}
+};
 
 static void
 object_destroyed (GtkObject *object, GtkWidget *widget)
@@ -65,53 +82,58 @@ object_destroyed (GtkObject *object, GtkWidget *widget)
 	gtk_widget_destroy (widget);
 }
 
+static void
+sp_object_attr_show_dialog (SPObject *object, const SPAttrDesc *desc, const guchar *tag)
+{
+	const guchar **labels, **attrs;
+	gint len, i;
+	gchar *title;
+	GtkWidget *w, *t;
+
+	len = 0;
+	while (desc[len].label) len += 1;
+
+	labels = alloca (len * sizeof (char *));
+	attrs = alloca (len * sizeof (char *));
+
+	for (i = 0; i < len; i++) {
+		labels[i] = desc[i].label;
+		attrs[i] = desc[i].attribute;
+	}
+
+	w = gtk_window_new (GTK_WINDOW_TOPLEVEL);
+	title = g_strdup_printf (_("%s attributes"), tag);
+	gtk_window_set_title (GTK_WINDOW (w), title);
+	g_free (title);
+
+	t = sp_attribute_table_new (object, len, labels, attrs);
+	gtk_widget_show (t);
+	gtk_container_add (GTK_CONTAINER (w), t);
+
+	gtk_signal_connect_while_alive (GTK_OBJECT (object), "destroy",
+					GTK_SIGNAL_FUNC (object_destroyed), w, GTK_OBJECT (w));
+
+	gtk_widget_show (w);
+}
+
 void
 sp_object_attributes_dialog (SPObject *object, const guchar *tag)
 {
-	const guchar **labels, **attrs;
-	GtkWidget *w, *t;
-	gint num_attrs;
-
 	g_return_if_fail (object != NULL);
 	g_return_if_fail (SP_IS_OBJECT (object));
 	g_return_if_fail (tag != NULL);
 
-	num_attrs = 0;
-	labels = NULL;
-	attrs = NULL;
-
 	if (!strcmp (tag, "SPAnchor")) {
-		g_return_if_fail (SP_IS_ANCHOR (object));
-
-		num_attrs = NUM_ANCHOR_ATTRS;
-		labels = anchor_labels;
-		attrs = anchor_attrs;
+		sp_object_attr_show_dialog (object, anchor_desc, tag);
 	} else if (!strcmp (tag, "SPStar")) {
-		num_attrs = NUM_STAR_ATTRS;
-		labels = star_labels;
-		attrs = star_attrs;
+		sp_object_attr_show_dialog (object, star_desc, tag);
 	} else if (!strcmp (tag, "SPSpiral")) {
-		num_attrs = NUM_SPIRAL_ATTRS;
-		labels = spiral_labels;
-		attrs = spiral_attrs;
+		sp_object_attr_show_dialog (object, spiral_desc, tag);
+	} else if (!strcmp (tag, "SPImage")) {
+		sp_object_attr_show_dialog (object, image_desc, tag);
+	} else if (!strcmp (tag, "SPRect")) {
+		sp_object_attr_show_dialog (object, rect_desc, tag);
 	}
 
-	if (num_attrs && labels && attrs) {
-		gchar *title;
-
-		w = gtk_window_new (GTK_WINDOW_TOPLEVEL);
-		title = g_strdup_printf (_("%s attributes"), tag);
-		gtk_window_set_title (GTK_WINDOW (w), title);
-		g_free (title);
-
-		t = sp_attribute_table_new (object, num_attrs, labels, attrs);
-		gtk_widget_show (t);
-		gtk_container_add (GTK_CONTAINER (w), t);
-
-		gtk_signal_connect_while_alive (GTK_OBJECT (object), "destroy",
-						GTK_SIGNAL_FUNC (object_destroyed), w, GTK_OBJECT (w));
-
-		gtk_widget_show (w);
-	}
 }
 
